--- a/temphumi/app/views/gettemphumi/getmonthdata.html.erb
+++ b/temphumi/app/views/gettemphumi/getmonthdata.html.erb
@@ -14,7 +14,7 @@
 <body>
   <div id="container" style="min-width:350px;height:280px"></div>
     <div align="center">
-      <%=link_to "Today T&H graph", gettemphumi_getdaydata_path %>&nbsp&nbsp|&nbsp&nbsp
+      <%=link_to "Today T&H graph", gettemphumi_getdaydata_path %>&nbsp&nbsp|&nbsp&nbsp|
       <%=link_to "Back", gettemphumi_index_path %>
     </div>
 
