adjust chats style

--- a/temphumi/app/views/gettemphumi/getdaydata.html.erb
+++ b/temphumi/app/views/gettemphumi/getdaydata.html.erb
@@ -15,7 +15,7 @@
     <%#=@record.to_json%>
   <div id="container" style="min-width:350px;height:280px"></div>
   <div align="center">
-    <%=link_to "30 days' graph", gettemphumi_getmonthdata_path %>
+    <%=link_to "30 days' graph", gettemphumi_getmonthdata_path %>&nbsp&nbsp|&nbsp&nbsp|
     <%=link_to "Back", gettemphumi_index_path %>
   </div>
 <script>
