add link to 30 days chart

--- a/temphumi/app/views/gettemphumi/index.html.erb
+++ b/temphumi/app/views/gettemphumi/index.html.erb
@@ -15,8 +15,7 @@
   <div id="container" style="min-width:350px;height:290px"></div>
   <div align="center">
     <%=link_to "Today's graph", gettemphumi_getdaydata_path %>
-    <%#=link_to "30 days' graph", gettemphumi_getmonthdata_path %>
-    <%#=link_to "Back", gettemphumi_index_path %>
+    <%=link_to "30 days' graph", gettemphumi_getmonthdata_path %>
 </div>
 <script>
   var temp,humi,place;
